[package]
name = "rs-bitswap"
version = "0.1.0"
authors = ["Aidan <asmaidan@look.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p-bitswap = "0.4.1"
async-std = "1.6.1"
futures = "0.3.5"
libipld-core = "0.3.0"
libp2p-core = "0.19.0"
libp2p-swarm = "0.19.0"
libp2p = "0.19.0"